force-app/main/default/objects/Contact/fields/Additional_Teacher_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Additional_Teacher_Numbers__c</fullName>
    <description>This field stores all additional (legacy) teacher numbers for Noordhoff and Plantyn after deduplication, in case they are needed for reference.</description>
    <label>Additional Teacher Numbers</label>
    <type>TextArea</type>
</CustomField>