force-app/main/default/objects/Contact/fields/AdditionalTeacherSchoolNumbers__c.field-meta.xml
<CustomField>
    <fullName>AdditionalTeacherSchoolNumbers__c</fullName>
    <description>This field is used to concatenate teacher school numbers when merging contacts to be able to store multiple teacher school number values when the contact is merged because a teacher can working at more than one school</description>
    <label>Additional Teacher School Numbers</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>