force-app/main/default/objects/Contact/fields/AssistantEmail__c.field-meta.xml
<CustomField>
    <fullName>AssistantEmail__c</fullName>
    <description>NH Prof: email to use to indirectly make appointments with DMU</description>
    <label>Assistant Email</label>
    <type>Email</type>
</CustomField>