force-app/main/default/objects/Contact/fields/BSR1__c.field-meta.xml
<CustomField>
    <fullName>BSR1__c</fullName>
    <label>BSR1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sociale Coach</fullName>
            </value>
            <value>
                <fullName>Serieuze Begeleider</fullName>
            </value>
            <value>
                <fullName>Resultaatgerichte Vakspecialist</fullName>
            </value>
            <value>
                <fullName>Flexibele Innovator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>