force-app/main/default/objects/Contact/fields/CheckDuplicate__c.field-meta.xml
<CustomField>
    <fullName>CheckDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckDuplicate</label>
    <type>Checkbox</type>
</CustomField>