force-app/main/default/objects/Contact/fields/CheckMigration2__c.field-meta.xml
<CustomField>
    <fullName>CheckMigration2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckMigration2</label>
    <type>Checkbox</type>
</CustomField>