force-app/main/default/objects/Contact/fields/CheckMigration__c.field-meta.xml
<CustomField>
    <fullName>CheckMigration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckMigration</label>
    <type>Checkbox</type>
</CustomField>