force-app/main/default/objects/Contact/fields/CheckMigrationDay__c.field-meta.xml
<CustomField>
    <fullName>CheckMigrationDay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckMigrationDay</label>
    <type>Checkbox</type>
</CustomField>