force-app/main/default/objects/Contact/fields/CommunicationLanguage__c.field-meta.xml
<CustomField>
    <fullName>CommunicationLanguage__c</fullName>
    <label>Communication Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Swedish</fullName>
            </value>
            <value>
                <fullName>DUT</fullName>
                <isActive>false</isActive>
                <label>DUT</label>
            </value>
            <value>
                <fullName>ENG</fullName>
                <isActive>false</isActive>
                <label>ENG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>