force-app/main/default/objects/Contact/fields/ErrorMessageForAWSUpdate__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessageForAWSUpdate__c</fullName>
    <label>ErrorMessageForAWSUpdate</label>
    <type>TextArea</type>
</CustomField>