force-app/main/default/objects/Contact/fields/External_Database__c.field-meta.xml
<CustomField>
    <fullName>External_Database__c</fullName>
    <description>External Database Name</description>
    <label>External Database</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UDB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>