force-app/main/default/objects/Contact/fields/ExternalContactId__c.field-meta.xml
<CustomField>
    <fullName>ExternalContactId__c</fullName>
    <description>Id of Contact in the External Database</description>
    <externalId>true</externalId>
    <label>External Contact Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>