force-app/main/default/objects/Contact/fields/IntegrationFactorySend__c.field-meta.xml
<CustomField>
    <fullName>IntegrationFactorySend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IntegrationFactorySend</label>
    <type>Checkbox</type>
</CustomField>