force-app/main/default/objects/Contact/fields/JobCategory__c.field-meta.xml
<CustomField>
    <fullName>JobCategory__c</fullName>
    <description>Noordhoff Professional: function of contact person high level. Function has the lower level values.</description>
    <label>Job Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Departmental Manager</fullName>
            </value>
            <value>
                <fullName>Educational Advisor</fullName>
            </value>
            <value>
                <fullName>Educational Manager</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Functional Application Manager</fullName>
            </value>
            <value>
                <fullName>HR Manager</fullName>
            </value>
            <value>
                <fullName>ICT Coördinator</fullName>
            </value>
            <value>
                <fullName>Learning &amp; Development Manager</fullName>
            </value>
            <value>
                <fullName>Manager Quality &amp; Safety</fullName>
            </value>
            <value>
                <fullName>Procurement Manager</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>