force-app/main/default/objects/Contact/fields/LastModifiedUnix__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedUnix__c</fullName>
    <label>Last Modified Unix</label>
    <length>155</length>
    <type>Text</type>
</CustomField>