force-app/main/default/objects/Contact/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <description>Holds the URL to the person&apos;s LinkedIn profile</description>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>