force-app/main/default/objects/Contact/fields/LinkedInSearch__c.field-meta.xml
<CustomField>
    <fullName>LinkedInSearch__c</fullName>
    <formula>HYPERLINK(&quot;https://www.linkedin.com/search/results/people/?keywords=&quot;&amp; FirstName &amp; &quot;%20&quot; &amp; LastName &amp; &quot;%20&quot;&amp;&quot;&amp;origin=GLOBAL_SEARCH_HEADER&quot;,&quot;Search this person on LinkedIn&quot;,&quot;_target&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkedIn Search</label>
    <type>Text</type>
</CustomField>