force-app/main/default/objects/Contact/fields/ManualMergeCheck__c.field-meta.xml
<CustomField>
    <fullName>ManualMergeCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual MergeCheck</label>
    <type>Checkbox</type>
</CustomField>