force-app/main/default/objects/Contact/fields/MarketingScore__c.field-meta.xml
<CustomField>
    <fullName>MarketingScore__c</fullName>
    <inlineHelpText>This is the score applied to this record based on the unique scores of all underlying interactions (leads).</inlineHelpText>
    <label>MarketingScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>