force-app/main/default/objects/Contact/fields/NoordhoffProfessionalTestField__c.field-meta.xml
<CustomField>
    <fullName>NoordhoffProfessionalTestField__c</fullName>
    <description>Field to test permission sets accross Opco&apos;s</description>
    <inlineHelpText>Field to test permission sets accross Opco&apos;s</inlineHelpText>
    <label>NoordhoffProfessionalTestField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>