force-app/main/default/objects/Contact/fields/OldContactId__c.field-meta.xml
<CustomField>
    <fullName>OldContactId__c</fullName>
    <externalId>true</externalId>
    <label>OldContactId</label>
    <length>55</length>
    <type>Text</type>
</CustomField>