force-app/main/default/objects/Contact/fields/OldContactIdOrigin__c.field-meta.xml
<CustomField>
    <fullName>OldContactIdOrigin__c</fullName>
    <label>OldContactIdOrigin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>