force-app/main/default/objects/Contact/fields/PersonContact__c.field-meta.xml
<CustomField>
    <fullName>PersonContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Person Contact</label>
    <type>Checkbox</type>
</CustomField>