force-app/main/default/objects/Contact/fields/PreferredEmail__c.field-meta.xml
<CustomField>
    <fullName>PreferredEmail__c</fullName>
    <label>Preferred Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Private Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>