force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Left Account</fullName>
            </value>
            <value>
                <fullName>Contact terminated</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Undeliverable</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Actief</fullName>
                <isActive>false</isActive>
                <label>Actief</label>
            </value>
            <value>
                <fullName>Bedrijf Verlaten</fullName>
                <isActive>false</isActive>
                <label>Bedrijf Verlaten</label>
            </value>
            <value>
                <fullName>Contact opgeheven</fullName>
                <isActive>false</isActive>
                <label>Contact opgeheven</label>
            </value>
            <value>
                <fullName>Dubbel</fullName>
                <isActive>false</isActive>
                <label>Dubbel</label>
            </value>
            <value>
                <fullName>Gestopt met activiteit</fullName>
                <isActive>false</isActive>
                <label>Gestopt met activiteit</label>
            </value>
            <value>
                <fullName>Onbestelbaar</fullName>
                <isActive>false</isActive>
                <label>Onbestelbaar</label>
            </value>
            <value>
                <fullName>Overleden</fullName>
                <isActive>false</isActive>
                <label>Overleden</label>
            </value>
            <value>
                <fullName>Pensioen</fullName>
                <isActive>false</isActive>
                <label>Pensioen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>