force-app/main/default/objects/Contact/fields/SuccessStatusOfLastAWSUpdate__c.field-meta.xml
<CustomField>
    <fullName>SuccessStatusOfLastAWSUpdate__c</fullName>
    <label>SuccessStatusOfLastAWSUpdate</label>
    <type>TextArea</type>
</CustomField>