force-app/main/default/objects/Contact/fields/TeacherSchoolNumber__c.field-meta.xml
<CustomField>
    <fullName>TeacherSchoolNumber__c</fullName>
    <description>System field for matching</description>
    <externalId>true</externalId>
    <label>TeacherSchoolNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>