force-app/main/default/objects/Contact/fields/UniqueEmailId__c.field-meta.xml
<CustomField>
    <fullName>UniqueEmailId__c</fullName>
    <description>This field combines the Operating Company and the Email address of the contact to create a unique identifier for the Contact (remove UNIQUE requirement and hid for all opcos, because functionality replaced by Salesforce standard duplication management)</description>
    <label>Unique Email Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>