force-app/main/default/objects/Contact/fields/zdSync__c.field-meta.xml
<CustomField>
    <fullName>zdSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZD Sync</label>
    <type>Checkbox</type>
</CustomField>