force-app/main/default/objects/Contact/listViews/AllContactsLiber.listView-meta.xml
<ListView>
    <fullName>AllContactsLiber</fullName>
    <columns>FULL_NAME</columns>
    <columns>Account.CustomerNumber__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OperatingCompany__c</field>
        <operation>equals</operation>
        <value>Liber</value>
    </filters>
    <label>All Contacts Liber</label>
    <sharedTo>
        <group>AllUsersLiber</group>
    </sharedTo>
</ListView>