force-app/main/default/objects/Contact/listViews/AllContactsNoordhoff.listView-meta.xml
<ListView>
    <fullName>AllContactsNoordhoff</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OperatingCompany__c</field>
        <operation>equals</operation>
        <value>Noordhoff</value>
    </filters>
    <label>All Contacts Noordhoff</label>
    <sharedTo>
        <group>AllUsersNoordhoff</group>
    </sharedTo>
</ListView>