force-app/main/default/objects/Contact/listViews/Contacts_change_account1.listView-meta.xml
<ListView>
    <fullName>Contacts_change_account1</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.CaseSafeId__c</field>
        <operation>equals</operation>
        <value>0013V00000AIbWtQAL</value>
    </filters>
    <label>Contacts change account</label>
    <sharedTo>
        <group>AllUsersPlantyn</group>
    </sharedTo>
</ListView>