force-app/main/default/objects/Contact/listViews/EnterpriseMarketContactsPlantyn.listView-meta.xml
<ListView>
    <fullName>EnterpriseMarketContactsPlantyn</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.OperatingCompany__c</field>
        <operation>equals</operation>
        <value>Plantyn</value>
    </filters>
    <filters>
        <field>Account.CustomerCategory__c</field>
        <operation>equals</operation>
        <value>Enterprise Market</value>
    </filters>
    <label>Enterprise Market Contacts Plantyn</label>
    <sharedTo>
        <group>AllUsersPlantyn</group>
    </sharedTo>
</ListView>